--- a/AirRace_Project/Packages/manifest.json
+++ b/AirRace_Project/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.render-pipelines.high-definition": "11.0.0",
     "com.unity.terrain-tools": "3.0.2-preview.3",
     "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "3.0.4",
