Assembly definitions root namespace changed

--- a/Assets/Scripts/Core/Core.asmdef
+++ b/Assets/Scripts/Core/Core.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Core",
-    "rootNamespace": "Core",
+    "rootNamespace": "AirRace.Core",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
