--- a/Assets/Scripts/GameState/GameState.asmdef
+++ b/Assets/Scripts/GameState/GameState.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "GameState",
-    "rootNamespace": "GameState",
+    "rootNamespace": "AirRace.GameState",
     "references": [
         "GUID:7ff318a4589694a45926949058573717",
         "GUID:0e1e0d45b978f3848aeb19fe7b0c5cf5"
