--- a/Assets/Scripts/Race/Race.asmdef
+++ b/Assets/Scripts/Race/Race.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Race",
-    "rootNamespace": "Race",
+    "rootNamespace": "AirRace.Race",
     "references": [
         "GUID:7ff318a4589694a45926949058573717"
     ],
