--- a/Assets/Scripts/GameState/GameState.asmdef
+++ b/Assets/Scripts/GameState/GameState.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "AirRace.GameState",
     "references": [
         "GUID:7ff318a4589694a45926949058573717",
-        "GUID:0e1e0d45b978f3848aeb19fe7b0c5cf5"
+        "GUID:0e1e0d45b978f3848aeb19fe7b0c5cf5",
+        "GUID:aaa79f00c09754e448248b9c7c72c0e0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
