--- a/Assets/Scripts/Input/Input.asmdef
+++ b/Assets/Scripts/Input/Input.asmdef
@@ -1,10 +1,8 @@
 {
     "name": "Input",
-    "rootNamespace": "Input",
+    "rootNamespace": "AirRace.Input",
     "references": [
-        "GUID:aaa79f00c09754e448248b9c7c72c0e0",
-        "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:aaccf970c80f5944db79c6564115ac76"
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
