#31 #28 AirplanePhysics no longer script, AirplaneController linked to InputController, added PlaneProperties, added throttle value change

--- a/Assets/Scripts/Player/Player.asmdef
+++ b/Assets/Scripts/Player/Player.asmdef
@@ -2,7 +2,8 @@
     "name": "Player",
     "rootNamespace": "AirRace.Player",
     "references": [
-        "GUID:7ff318a4589694a45926949058573717"
+        "GUID:7ff318a4589694a45926949058573717",
+        "GUID:42083a838fb9a014f9965b3f6814841a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
