--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "1.8.0-preview",
     "com.unity.cinemachine": "2.7.5",
     "com.unity.collab-proxy": "1.5.7",
     "com.unity.ide.rider": "3.0.6",
@@ -7,6 +9,7 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.inputsystem": "1.0.2",
     "com.unity.render-pipelines.universal": "10.5.1",
+    "com.unity.terrain-tools": "3.0.2-preview.3",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.5.5",
