--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,21 +1,21 @@
 {
   "dependencies": {
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.2d.tilemap.extras": "1.8.0-preview",
-    "com.unity.cinemachine": "2.7.5",
-    "com.unity.collab-proxy": "1.5.7",
-    "com.unity.ide.rider": "3.0.6",
+    "com.unity.2d.tilemap.extras": "2.2.1",
+    "com.unity.cinemachine": "2.8.0",
+    "com.unity.collab-proxy": "1.13.5",
+    "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.inputsystem": "1.0.2",
-    "com.unity.render-pipelines.universal": "10.5.1",
-    "com.unity.terrain-tools": "3.0.2-preview.3",
-    "com.unity.test-framework": "1.1.24",
+    "com.unity.ide.vscode": "1.2.4",
+    "com.unity.inputsystem": "1.1.1",
+    "com.unity.render-pipelines.universal": "12.1.0",
+    "com.unity.terrain-tools": "4.0.3",
+    "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.5.5",
+    "com.unity.timeline": "1.6.2",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.19-preview",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.6.1",
+    "com.unity.visualscripting": "1.7.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
